<resources>
    <string name="app_name">AutoGo</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="HomePage_text1">Mode de fonctionnement</string>
    <string name="HomePage_text2">Veuillez choisir le mode que vous souhaitez utiliser</string>
    <string name="HomePage_btn1">Automatique</string>
    <string name="HomePage_btn2">Manuel</string>
    <string name="HomePage_btn3">Test</string>
    <string name="ManuelMode">Mode Manuel</string>
    <string name="AutomaticMode">Mode Automatique</string>
    <string name="TestMode">Mode de Test</string>
    <string name="ResultPath">Résultat A*</string>
    <string name="forward">Avancer</string>
    <string name="left">Gauche</string>
    <string name="stop">Stop</string>
    <string name="right">Droite</string>
    <string name="backward">Reculer </string>
    <string name="disconnect">Se déconnecter</string>
    <string name="connect">Se connecter</string>
    <string name="ConnectText">Se connecter \n au Raspberry Pi zero</string>
    <string name="IPaddress">Adresse IP</string>
    <string name="Port">Port</string>
    <string name="AutoPage_text1">Veuillez saisir les données suivantes :</string>
    <string name="AutoPage_text2">Nombre de lignes :</string>
    <string name="AutoPage_text3">Nombre de colonnes :</string>
    <string name="AutoPage_text4">Départ</string>
    <string name="AutoPage_text5">X</string>
    <string name="AutoPage_text6">Y</string>
    <string name="AutoPage_text7">Arrivé</string>
    <string name="AutoPage_text8">Les Obstacles</string>
    <string name="add">Ajouter un Obstacle</string>
    <string name="send">Envoyer</string>
    <string name="PARAM_VITES_PAS">PARAM_VITES_PAS</string>
    <string name="PARAM_I_FOR_GO_LEFT">PARAM_I_FOR_GO_LEFT</string>
    <string name="PARAM_DELAY_GO_LEFT">PARAM_DELAY_GO_LEFT</string>
    <string name="PARAM_STOP_GO_LEFT">PARAM_STOP_GO_LEFT</string>
    <string name="PARAM_I_FOR_GO_RIGHT">PARAM_I_FOR_GO_RIGHT</string>
    <string name="PARAM_DELAY_GO_RIGHT">PARAM_DELAY_GO_RIGHT</string>
    <string name="PARAM_STOP_GO_RIGHT">PARAM_STOP_GO_RIGHT</string>
    <string name="PARAM_ANNUL_TEST">PARAM_ANNUL_TEST</string>
    <string name="PARAM_I_FOR_GO_FORWARD">PARAM_I_FOR_GO_FORWARD</string>
    <string name="PARAM_CORRECTION">PARAM_CORRECTION</string>
    <string name="PARAM_VITES_L">PARAM_VITES_L</string>
    <string name="PARAM_VITES_R">PARAM_VITES_R</string>
    <string name="please_wait">Please wait ...</string>
    <string name="suivant">Suivant</string>
</resources>
