<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".ModeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:text="@string/HomePage_text1"
            android:textColor="#FFFF"
            android:textSize="30dp"
            app:fontFamily="@font/neo_latina"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/HomePage_text2"
            android:textColor="#FFFF"
            android:textSize="20dp"
            android:textAlignment="center"
            app:fontFamily="serif"
        />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/HomePage_btn1"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textSize="25dp"
        />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/HomePage_btn2"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textSize="25dp"
            />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/HomePage_btn3"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textSize="25dp"
            />

    </LinearLayout>
</LinearLayout>