<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".TestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/TestMode"
        android:textColor="#FFFF"
        android:textSize="30dp"
        app:fontFamily="@font/neo_latina" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_VITES_PAS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_VITES_PAS"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_I_FOR_GO_LEFT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_I_FOR_GO_LEFT"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_DELAY_GO_LEFT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_DELAY_GO_LEFT"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_STOP_GO_LEFT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_STOP_GO_LEFT"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_I_FOR_GO_RIGHT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_I_FOR_GO_RIGHT"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_DELAY_GO_RIGHT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_DELAY_GO_RIGHT"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_STOP_GO_RIGHT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_STOP_GO_RIGHT"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_ANNUL_TEST"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_ANNUL_TEST"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_I_FOR_GO_FORWARD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_I_FOR_GO_FORWARD"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_CORRECTION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_CORRECTION"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_VITES_L"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/PARAM_VITES_L"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/PARAM_VITES_R"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/PARAM_VITES_R"
                        android:inputType="number"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sendTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textSize="20dp" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</LinearLayout>