<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".ManuelActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/ManuelMode"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="30dp"
        app:fontFamily="@font/neo_latina"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#d3cce3"
                    android:padding="20dp"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/forward"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#d3cce3"
                    android:padding="20dp"
                    android:layout_weight="1"
                    android:textSize="19dp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/left" />

                <Button
                    android:id="@+id/stop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="#490C0C"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:visibility="invisible"
                    android:text="@string/stop" />

                <Button
                    android:id="@+id/right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#d3cce3"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:textSize="19dp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#d3cce3"
                    android:padding="20dp"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/backward"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/manText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>